gitops/application/base/orthanc/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: orthanc
  labels:
    app: orth
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: orth
  template:
    metadata:
      labels:
        app: orth 
    spec:
      volumes:
      - name: cmvol
        configMap:
          name: orthanc-app
          defaultMode: 0755
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: orthanc
        image: orthanc-plugins
        args: ["/run/secrets/"]
        securityContext:
          capabilities:
            drop:
              - ALL
            add:
              - DAC_OVERRIDE
          allowPrivilegeEscalation: false
        ports:
          - containerPort: 8042
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi" 
        volumeMounts:
        - name: cmvol 
          mountPath: "/run/secrets/orthanc.json"
          subPath: "orthanc.json"
          readOnly: true
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /app/explorer.html
            port: 8042
            scheme: HTTP
            httpHeaders:
              - name: Authorization
                value: Basic YWRtaW46b3J0aGFuYw== 
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /app/explorer.html
            port: 8042
            scheme: HTTP
            httpHeaders:
              - name: Authorization
                value: Basic YWRtaW46b3J0aGFuYw== 
          initialDelaySeconds: 60
          periodSeconds: 120
          successThreshold: 1
          timeoutSeconds: 2
      automountServiceAccountToken: false
